command-derive/tests/07-reject-double-key.stderr
error: Keys in `#[command(...)]` can't be repeated
 --> $DIR/07-reject-double-key.rs:6:15
  |
6 |     #[command(code = "HI")]
  |               ^^^^^^^^^^^
